# QuietSignal-BackEnd

./: .gitignore  README.md  pyproject.toml
src/quietsignal_backend/: auth.py  config.py  database.py  main.py  models.py  sentiment.py  settings.py
src/quietsignal_backend/api/: deps.py
src/quietsignal_backend/api/routers/: adminRoutes.py  analyzeRoutes.py  authRoutes.py  journalRoutes.py  userRoutes.py
src/quietsignal_backend/database/: __init__.py  base.py  dbInitializer.py  engine.py
src/quietsignal_backend/ml/: ml.py  modelLoader.py
src/quietsignal_backend/models/dao/: journalDAO.py  journalEntryDAO.py  userDAO.py
src/quietsignal_backend/models/dto/: entryDTO.py
src/quietsignal_backend/models/entities/: journalEntity.py  journalEntryEntity.py  userEntity.py
src/quietsignal_backend/routes/: analyze_routes.py  auth_routes.py
src/quietsignal_backend/services/: analyzeService.py  authService.py  journalService.py  userService.py
src/quietsignal_backend/utils/: jwtHandler.py
tests/: testAnalyzeRoutes.py  testAnalyzeService.py
